[package]
name = "flowstorm"
version = "0.1.0"
authors = ["Juan Monetta jpmonettas@gmail.com"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.15.0" # Gives us egui, epi and web+native backends

[features]
default = []

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }