[package]
name = "flowstorm"
version = "0.1.0"
authors = ["Juan Monetta jpmonettas@gmail.com"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = { version = "0.15.0", features = ["multi_threaded"] }
epi = { version = "0.15.0" }
egui_glium = { version = "0.15.0", default-features = false, features = ["clipboard", "epi", "links"], optional = true }
futures = { version = "0.3", features = ["compat"] }

[features]
default = ["default_fonts", "egui_glium"]
default_fonts = ["egui/default_fonts"]
multi_threaded = ["egui/multi_threaded"]

[profile.release]
opt-level = 2 # fast and small wasm

# [patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }