[package]
name = "flowstorm"
version = "0.1.0"
authors = ["Juan Monetta jpmonettas@gmail.com"]
edition = "2018"

[dependencies]
# UI (egui)
egui = { version = "0.16.1", features = ["multi_threaded"] }
epi = { version = "0.16.0" }
eframe = { version = "0.16", default-features = false, features = ["default_fonts", "egui_glow"] }
egui_glow = { version = "0.16.0", default-features = false, features = ["clipboard", "epi", "links"]}
#egui_glium = { version = "0.16.0", default-features = false, features = ["clipboard", "epi", "links"], optional = true }

# websockets
tungstenite = { version = "0.16.0" }

# json parsing
json = "0.12.4"

[features]
#default = ["default_fonts", "egui_glow"]
default_fonts = ["egui/default_fonts"]
multi = ["egui/multi_threaded"]

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }